--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@angular/router": "^18.1.0",
     "@angular/ssr": "^18.1.1",
     "@prismicio/client": "^7.6.0",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "morgan": "^1.10.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
@@ -33,6 +35,7 @@
     "@angular/compiler-cli": "^18.1.0",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^18.18.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
