--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@prismicio/client": "^7.6.0",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "faunadb": "^4.8.0",
     "morgan": "^1.10.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
