--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "@angular/router": "^18.1.0",
     "@angular/ssr": "^18.1.1",
     "@prismicio/client": "^7.6.0",
+    "@stripe/stripe-js": "^4.3.0",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "faunadb": "^4.8.0",
     "morgan": "^1.10.0",
     "rxjs": "~7.8.0",
+    "stripe": "^16.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
