--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node dist/projeto-ymovier-angular/server/server.mjs",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:projeto-ymovier-angular": "node dist/projeto-ymovier-angular/server/server.mjs"
+    "serve:no-ssr": "ng serve"
   },
   "private": true,
   "dependencies": {
