--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "ng": "ng",
     "start": "node dist/projeto-ymovier-angular/server/server.mjs",
-    "build": "ng build --configuration production && npm start",
+    "build": "ng build",
+    "build:prod": "ng build --configuration production",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "serve:no-ssr": "ng serve"
